Fix long URLs in comments to word-wrap

--- a/hn/style.css
+++ b/hn/style.css
@@ -10,6 +10,10 @@ html{
     overflow-y: scroll;
 }
 
+code {
+    font-family: 'Roboto Mono', monospace;
+}
+
 nav ul{
     list-style-type: none;
     display: flex;
@@ -93,4 +97,10 @@ nav ul li:hover{
     border-left: 2px solid #808080;
     background: #f2f2f2;
 
+}
+
+.comment a{
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-word;
 }
